--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -28,9 +28,7 @@
     "interval-unit": "per second (1..50)",
     "learn": "Record:",
     "duration": "Duration:",
-    "duration-unit": "seconds (1..80)",
-    "play": "Play:",
-    "loops": "Loops:"
+    "duration-unit": "seconds (1..80)"
   },
   "App": {
     "programming": "Programming",
