--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -39,7 +39,7 @@
     "duration": "Duration:",
     "duration-unit": "seconds (1..80)",
     "language": "Language",
-    "updated": "Settings aktualisiert"
+    "updated": "Settings updated"
   },
   "App": {
     "programming": "Programming",
