--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -14,6 +14,7 @@
     "bluetoothNotTurnedOnTitle": "Bluetooth is powered off",
     "bluetoothNotTurnedOnMessage": "Please turn on Bluetooth",
     "programName": "Program name",
+    "noConnectedDevice": "Keine Verbindung"
   },
   "BlockProgramming": {
     "programSelectionPrompt": "Select a program..."
