Adds the language resource for italien

--- a/resources/locales/de.json
+++ b/resources/locales/de.json
@@ -16,8 +16,8 @@
     "programName": "Programmname",
     "noConnectedDevice": "Keine Verbindung"
   },
-  "BlockProgramming":{
-    "programSelectionPrompt": "Wählen Sie ein Programm..."
+  "BlockProgramming": {
+    "programSelectionPrompt": "..."
   },
   "SpeedInput": {
     "invalidEntry": "Ungültige Eingabe",
