Adds i18n texts for left/right

--- a/resources/locales/de.json
+++ b/resources/locales/de.json
@@ -13,7 +13,9 @@
     "bluetoothNotTurnedOnTitle": "Bluetooth ist ausgeschaltet.",
     "bluetoothNotTurnedOnMessage": "Bitte schalten Sie Bluetooth ein.",
     "programName": "Programmname",
-    "noConnectedDevice": "Keine Verbindung"
+    "noConnectedDevice": "Keine Verbindung",
+	"left": "L",
+	"right": "R"
   },
   "BlockProgramming": {
     "programSelectionPrompt": "..."
