--- a/resources/locales/de.json
+++ b/resources/locales/de.json
@@ -15,7 +15,8 @@
     "bluetoothNotTurnedOnTitle": "Bluetooth ist ausgeschaltet.",
     "bluetoothNotTurnedOnMessage": "Bitte schalten Sie Bluetooth ein.",
     "programName": "Programmname",
-    "noConnectedDevice": "Keine Verbindung"
+    "noConnectedDevice": "Keine Verbindung",
+    "dialogCancelButton": "ABBRECHEN"
   },
   "BlockProgramming": {
     "programSelectionPrompt": "..."
