--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -15,7 +15,8 @@
     "bluetoothNotTurnedOnTitle": "Bluetooth is powered off",
     "bluetoothNotTurnedOnMessage": "Please turn on Bluetooth",
     "programName": "Program name",
-    "noConnectedDevice": "No connection"
+    "noConnectedDevice": "No connection",
+    "dialogCancelButton": "CANCEL"
   },
   "BlockProgramming": {
     "programSelectionPrompt": "..."
