--- a/resources/locales/it.json
+++ b/resources/locales/it.json
@@ -16,7 +16,8 @@
     "bluetoothNotTurnedOnTitle": "Bluetooth è spento",
     "bluetoothNotTurnedOnMessage": "Accendere Bluetooth",
     "programName": "Nome del programma",
-    "noConnectedDevice": "Nessuna connessione"
+    "noConnectedDevice": "Nessuna connessione",
+    "dialogCancelButton": "ANNULLA"
   },
   "BlockProgramming": {
     "programSelectionPrompt": "..."
