--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -19,7 +19,8 @@
     "dialogCancelButton": "CANCEL"
   },
   "BlockProgramming": {
-    "programSelectionPrompt": "..."
+    "programSelectionPrompt": "...",
+    "programSelectionPromptTitle": "Select a program"
   },
   "SpeedInput": {
     "invalidEntry": "Invalid Entry",
