fixed invalid duration & interval message

--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -37,7 +37,10 @@
     "updated": "Settings updated",
     "error": "Error",
     "tooBig": "The entered number is too large.",
-    "websiteURL":"https://www.explore-it.org/en"
+    "websiteURL":"https://www.explore-it.org/en",
+    "invalidEntry": "Invalid Entry",
+    "invalidDurationMessage": "Please only enter integers between 1-80.",
+    "invalidIntervalMessage": "Please only enter integers between 1-50."
   },
   "RoboticsDatabase": {
     "success": "Success",
