--- a/resources/locales/de.json
+++ b/resources/locales/de.json
@@ -37,7 +37,10 @@
     "updated": "Einstellungen sind aktualisiert",
     "error": "Fehler",
     "tooBig": "Die eingegebene Zahl ist zu gross.",
-    "websiteURL":"https://www.explore-it.org/de"
+    "websiteURL":"https://www.explore-it.org/de",
+    "invalidEntry": "Ungültige Eingabe",
+    "invalidDurationMessage": "Bitte gib nur ganze Zahlen zwischen 1-80 ein.",
+    "invalidIntervalMessage": "Bitte gib nur ganze Zahlen zwischen 1-50 ein."
   },
   "RoboticsDatabase": {
     "success": "Erfolg",
