--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -15,8 +15,12 @@
     "bluetoothNotTurnedOnTitle": "Bluetooth is powered off",
     "bluetoothNotTurnedOnMessage": "Please turn on Bluetooth",
     "programName": "Program name",
-    "noConnectedDevice": "No connection",
-    "dialogCancelButton": "CANCEL"
+    "noConnectedDevice": "_ _ : _ _",
+    "dialogCancelButton": "CANCEL",
+    "unsupportedAppVersionTitle": "Version not supported",
+    "unsupportedAppVersionMessage": "App version possibly outdated. Please download the latest version from the appstore / playstore.",
+    "unsupportedRobotVersionTitle": "Version not supported",
+    "unsupportedRobotVersionMessage": "The robot firmware version is no longer supported. Please contact explore-it to get your robot up-to-date."
   },
   "BlockProgramming": {
     "programSelectionPrompt": "...",
