changed integer to number

--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -28,7 +28,7 @@
   },
   "SpeedInput": {
     "invalidEntry": "Invalid Entry",
-    "invalidEntryMessage": "Please only enter integers between 0-100."
+    "invalidEntryMessage": "Please only enter numbers between 0-100."
   },
   "Settings": {
     "settings": "Settings:",
@@ -43,8 +43,8 @@
     "tooBig": "The entered number is too large.",
     "websiteURL":"https://www.explore-it.org/en",
     "invalidEntry": "Invalid Entry",
-    "invalidDurationMessage": "Please only enter integers between 1-80.",
-    "invalidIntervalMessage": "Please only enter integers between 1-50."
+    "invalidDurationMessage": "Please only enter numbers between 1-80.",
+    "invalidIntervalMessage": "Please only enter numbers between 1-50."
   },
   "RoboticsDatabase": {
     "success": "Success",
