added alert when trying to upload an empty program

--- a/resources/locales/de.json
+++ b/resources/locales/de.json
@@ -20,8 +20,8 @@
     "unsupportedAppVersionTitle": "Version nicht unterstützt",
     "unsupportedAppVersionMessage": "Die App ist möglicherweise zu alt. Bitte lade die neuste Version aus dem Appstore / Playstore herunter.",
     "unsupportedRobotVersionTitle": "Version nicht unterstützt",
-    "unsupportedRobotVersionMessage": "Die Version des Roboters wird nicht mehr unterstützt. Bitte wende dich an explore-it um den Roboter auf die neuste version zu updaten."
-
+    "unsupportedRobotVersionMessage": "Die Version des Roboters wird nicht mehr unterstützt. Bitte wende dich an explore-it um den Roboter auf die neuste version zu updaten.",
+    "emptyProgram": "Das Programm, das Sie versuchen hochzuladen, ist leer."
   },
   "BlockProgramming": {
     "programSelectionPrompt": "...",
