--- a/resources/locales/fr.json
+++ b/resources/locales/fr.json
@@ -20,7 +20,8 @@
         "unsupportedAppVersionTitle": "Version non supportée",
         "unsupportedAppVersionMessage": " L'application est probablement trop vieille. Télécharger la dernière version sur l'Appstore / Playstore.",
         "unsupportedRobotVersionTitle": "Version du robot non supportée",
-        "unsupportedRobotVersionMessage": "La version du robot n'est plus prise en charge. Contacter explore-it pour mettre à jour le robot"
+        "unsupportedRobotVersionMessage": "La version du robot n'est plus prise en charge. Contacter explore-it pour mettre à jour le robot",
+        "emptyProgram": "Le programme que vous essayez de télécharger est vide."
     },
     "BlockPrgrogramming": {
         "programSelectionPrompt": "…",
