--- a/resources/locales/it.json
+++ b/resources/locales/it.json
@@ -21,7 +21,8 @@
     "unsupportedAppVersionTitle": "Versione non supportata",
     "unsupportedAppVersionMessage": "La versione dell'applicazione potrebbe essere obsoleta. Si prega di scaricare l'ultima versione dall'appstore / playstore.",
     "unsupportedRobotVersionTitle": "Versione non supportata",
-    "unsupportedRobotVersionMessage": "La versione del firmware del robot non è più supportata. Si prega di contattare explore-it per ottenere il vostro robot aggiornato."
+    "unsupportedRobotVersionMessage": "La versione del firmware del robot non è più supportata. Si prega di contattare explore-it per ottenere il vostro robot aggiornato.",
+    "emptyProgram": "Il programma che state cercando di caricare è vuoto."
   },
   "BlockProgramming": {
     "programSelectionPrompt": "...",
