closed #309 |  added length

--- a/resources/locales/de.json
+++ b/resources/locales/de.json
@@ -15,6 +15,7 @@
     "bluetoothNotTurnedOnTitle": "Bluetooth ist ausgeschaltet.",
     "bluetoothNotTurnedOnMessage": "Bitte schalten Sie Bluetooth ein.",
     "programName": "Programmname",
+    "length": "Länge:",
     "noConnectedDevice": "_ _ : _ _",
     "dialogCancelButton": "ABBRECHEN",
     "unsupportedAppVersionTitle": "Version nicht unterstützt",
