--- a/resources/locales/it.json
+++ b/resources/locales/it.json
@@ -16,6 +16,7 @@
     "bluetoothNotTurnedOnTitle": "Bluetooth è spento",
     "bluetoothNotTurnedOnMessage": "Accendere Bluetooth",
     "programName": "Nome del programma",
+    "length": "Lunghezza:",
     "noConnectedDevice": "_ _ : _ _",
     "dialogCancelButton": "ANNULLA",
     "unsupportedAppVersionTitle": "Versione non supportata",
